WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237308
Unable to scroll results.webkit.org results using the scrollbars
https://bugs.webkit.org/show_bug.cgi?id=237308
Summary
Unable to scroll results.webkit.org results using the scrollbars
Dan Glastonbury
Reported
2022-02-28 20:25:42 PST
When visiting results.webkit.org, I'm unable to scroll the results view by grabbing the scrollbar with mouse-down and moving the mouse.
Attachments
Add attachment
proposed patch, testcase, etc.
Dan Glastonbury
Comment 1
2022-02-28 20:26:38 PST
:smfr points out that grabbing the bottom of the scrollbar works.
Radar WebKit Bug Importer
Comment 2
2022-02-28 20:28:29 PST
<
rdar://problem/89598421
>
Simon Fraser (smfr)
Comment 3
2022-02-28 20:38:26 PST
Looks like a z-order hit-testing issue with composited scrolling. Related:
bug 227545
Alexey Proskuryakov
Comment 4
2022-03-01 14:49:23 PST
Working around this would also be beneficial.
Simon Fraser (smfr)
Comment 5
2023-10-11 21:57:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18982
EWS
Comment 6
2023-10-12 09:10:22 PDT
Committed
269255@main
(db2f6b2a047a): <
https://commits.webkit.org/269255@main
> Reviewed commits have been landed. Closing PR #18982 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug